# litchi2fp

./: .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs  mtp.rs
src/flightplan/: color.rs  from_bin.rs  from_csv.rs  from_kml.rs  mod.rs  model.rs
src/litchi/: kml.rs  mod.rs
src/litchi/csv/: mod.rs
src/litchi/csv/de/: deserializer.rs  helpers.rs  mod.rs
