[package]
name = "litchi2fp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.5", features = ["derive"] }
csv = "1.1.6"
google_maps = { version = "2.1.4", features = ["elevation", "enable-reqwest", "rustls", "brotli"], default-features = false }
kml = "0.4.0"
libmtp-rs = "0.7.7"
regex = "1.5.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_repr = "0.1.8"

[dev-dependencies]
palette = "0.6.0"
