[package]
name = "litchi2fp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.14", features = ["derive"] }
csv = "1.1.6"
kml = "0.4.3"
libmtp-rs = "0.7.7"
regex = "1.6.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_repr = "0.1.8"

[dev-dependencies]
palette = "0.6.1"
