[package]
name = "litchi2fp"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
kml = "0.6.0"
libmtp-rs = "0.7.7"
regex = "1.7.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_repr = "0.1.9"

[dev-dependencies]
palette = "0.6.1"
